[package]
name = "num-bigint-bench"
version = "0.1.0"
authors = ["lcnr/Bastian Kauschke <bastian_kauschke@hotmail.de>"]
edition = "2018"

[dev-dependencies]
criterion = "0.2"
rand_xorshift = "0.1"
lazy_static = "1"

[[bench]]
name = "binop"
harness = false

[dependencies.num-bigint]
git = "https://github.com/rust-num/num-bigint.git"
default-features = false
features = [ "std", "rand", "serde", "i128" ]

[dependencies.num-integer]
version = "0.1.39"
default-features = false
features = [ "std", "i128" ]

[dependencies.num-traits]
version = "0.2.4"
default-features = false
features = [ "std", "i128" ]

[dependencies.rand]
version = "0.5"
default-features = false
features = ["std", "i128_support"]

[dependencies.serde]
version = "1.0"
default-features = false
features = ["std"]

[dev-dependencies.serde_test]
version = "1.0"